video-sink: delay subtitle upload until the frame is uploaded

https://bugzilla.gnome.org/show_bug.cgi?id=756257